--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,21 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/darkblue"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/switchButton"
-        android:layout_width="161dp"
-        android:layout_height="79dp"
-        android:onClick="onClick"
-        android:text="Wechsel zu Screen 2"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.477"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.469" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageButton
+        android:id="@+id/music_button1"
+        android:layout_width="175dp"
+        android:layout_height="175dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="235dp"
+        android:layout_marginBottom="196dp"
+        android:background="@drawable/seat_button"
+        android:backgroundTint="#4DD7FA"
+        android:src="@drawable/music_icon" />
+
+    <ImageButton
+        android:id="@+id/light_button1"
+        android:layout_width="175dp"
+        android:layout_height="175dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="560dp"
+        android:layout_marginBottom="194dp"
+        android:background="@drawable/seat_button"
+        android:backgroundTint="#4DD7FA"
+        android:src="@drawable/light_icon" />
+
+    <ImageButton
+        android:id="@+id/seat_button1"
+        android:layout_width="175dp"
+        android:layout_height="175dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="892dp"
+        android:layout_marginBottom="196dp"
+        android:background="@drawable/seat_button"
+        android:backgroundTint="#4DD7FA"
+        android:src="@drawable/ic_action_seat" />
+
+</RelativeLayout>
