--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,15 +8,35 @@
     tools:context=".MainActivity">
 
     <ImageButton
-        android:id="@+id/music_button1"
+        android:id="@+id/seat_button1"
         android:layout_width="175dp"
         android:layout_height="175dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="235dp"
-        android:layout_marginBottom="196dp"
+        android:layout_marginEnd="830dp"
+        android:layout_marginBottom="111dp"
         android:background="@drawable/seat_button"
         android:backgroundTint="#4DD7FA"
+        android:contentDescription='android:contentDescription="@string"'
+        android:elevation="100dp"
+        android:padding="100dp"
+
+        android:src="@drawable/ic_action_seat" />
+
+    <ImageButton
+        android:id="@+id/music_button1"
+        style="@style/Widget.AppCompat.ImageButton"
+        android:layout_width="175dp"
+        android:layout_height="175dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="266dp"
+        android:layout_marginBottom="112dp"
+        android:background="@drawable/seat_button"
+        android:backgroundTint="#4DD7FA"
+        android:contentDescription='android:contentDescription="@string"'
+        android:elevation="100dp"
+        android:padding="100dp"
         android:src="@drawable/music_icon" />
 
     <ImageButton
@@ -25,22 +45,26 @@
         android:layout_height="175dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="560dp"
-        android:layout_marginBottom="194dp"
+        android:layout_marginEnd="552dp"
+        android:layout_marginBottom="112dp"
         android:background="@drawable/seat_button"
         android:backgroundTint="#4DD7FA"
+        android:contentDescription='android:contentDescription="@string"'
+        android:elevation="100dp"
+        android:padding="100dp"
         android:src="@drawable/light_icon" />
 
-    <ImageButton
-        android:id="@+id/seat_button1"
-        android:layout_width="175dp"
-        android:layout_height="175dp"
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="725dp"
+        android:layout_height="356dp"
+        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="892dp"
-        android:layout_marginBottom="196dp"
-        android:background="@drawable/seat_button"
-        android:backgroundTint="#4DD7FA"
-        android:src="@drawable/ic_action_seat" />
+        android:layout_marginTop="27dp"
+        android:layout_marginEnd="274dp"
+        android:layout_marginBottom="339dp"
+        android:contentDescription='android:contentDescription="@string"'
+        app:srcCompat="@drawable/snooze_graphic" />
 
 </RelativeLayout>
