--- a/app/src/main/res/layout/activity_light_screen.xml
+++ b/app/src/main/res/layout/activity_light_screen.xml
@@ -2,19 +2,105 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/LightScreen"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#1C4B70"
     tools:context=".LightScreen">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="577dp"
-        android:layout_height="421dp"
-        android:alpha="5"
-        android:text="Activity 2 wurde geöfnnet."
-        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
+    <Button
+        android:id="@+id/SaveAsFavorite"
+        android:layout_width="261dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="276dp"
+        android:layout_marginBottom="56dp"
+        android:background="#32E6FD"
+        android:backgroundTint="#32E6FD"
+        android:text="@string/save_as_favorite"
+        android:textColor="#FFFFFF"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/ShowFavorite"
+        android:layout_width="246dp"
+        android:layout_height="62dp"
+        android:background="#FF1100"
+        android:backgroundTint="#FF0202"
+        android:text="@string/show_favorite"
+        android:textColor="#FFFFFF"
+        android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.293"
+        app:layout_constraintStart_toEndOf="@+id/SaveAsFavorite"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.917" />
+
+    <SeekBar
+        android:id="@+id/seekBar2"
+        android:layout_width="428dp"
+        android:layout_height="84dp"
+        android:layout_marginStart="192dp"
+        android:layout_marginBottom="188dp"
+        android:indeterminate="false"
+        android:max="40"
+        android:scrollbarSize="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/SaveAsFavorite"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <TextView
+        android:id="@+id/blue"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:layout_marginTop="48dp"
+        android:background="#0027FF"
+        android:isScrollContainer="false"
+        android:text="@string/blue"
+        android:textAlignment="center"
+        android:textSize="36sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.716"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/yellow"
+        app:layout_constraintVertical_bias="0.0"
+        tools:text="B" />
+
+    <TextView
+        android:id="@+id/yellow"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:layout_marginTop="32dp"
+        android:background="#FFE500"
+        android:text="@string/yellow"
+        android:textAlignment="center"
+        android:textSize="36sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.716"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/red"
+        tools:text="Y" />
+
+    <TextView
+        android:id="@+id/red"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:layout_marginTop="172dp"
+        android:background="#FB0202"
+        android:text="@string/red"
+        android:textAlignment="center"
+        android:textSize="36sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.716"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="R" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
