--- a/app/src/main/res/layout/activity_light_screen.xml
+++ b/app/src/main/res/layout/activity_light_screen.xml
@@ -78,7 +78,7 @@
         android:layout_height="75dp"
         android:layout_marginTop="28dp"
         android:background="#FFE500"
-        android:text="@string/yellow"
+        android:text="@string/y"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="50sp"
@@ -95,7 +95,7 @@
         android:layout_height="75dp"
         android:layout_marginTop="148dp"
         android:background="#FB0202"
-        android:text="@string/red"
+        android:text="@string/r"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="50sp"
