--- a/app/src/main/res/layout/activity_music_screen.xml
+++ b/app/src/main/res/layout/activity_music_screen.xml
@@ -13,86 +13,116 @@
         android:layout_height="50dp"
         android:layout_marginStart="150dp"
         android:layout_marginTop="300dp"
+        android:layout_marginBottom="60dp"
         android:background="#4DD7FA"
-        android:text="Save as favorite"
+        android:text="@string/save_favorite_button"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
         android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+
+        />
 
     <Button
-        android:id="@+id/button_play_favorite"
+        android:id="@+id/button"
         android:layout_width="150dp"
         android:layout_height="50dp"
-        android:layout_marginStart="424dp"
         android:layout_marginTop="300dp"
-        android:background="#CD0221"
-        android:text="Play favorite"
-        android:textColor="#FFFFFF"
+        android:layout_marginEnd="150dp"
+        android:layout_marginBottom="60dp"
+        android:background="#E80F0F"
+        android:text="@string/play_favorite_button"
+        android:textColor="#F6F0F0"
         android:textSize="18sp"
-        android:visibility="visible"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
-        android:id="@+id/strand_button"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:id="@+id/berg_button"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
         android:layout_marginStart="100dp"
         android:layout_marginTop="75dp"
-        android:background="@drawable/strand_icon"
+        android:background="@drawable/berg"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
-        android:id="@+id/regen_button"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:id="@+id/dschungel_button"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
         android:layout_marginStart="175dp"
         android:layout_marginTop="75dp"
-        android:background="@drawable/regen_icon"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageButton
-        android:id="@+id/jungle_button"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="250dp"
-        android:layout_marginTop="75dp"
-        android:background="@drawable/jungle_icon"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageButton
-        android:id="@+id/mountain_button"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="150dp"
-        android:background="@drawable/mountain_icon"
+        android:background="@drawable/dschungel"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/lagerfeuer_button"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:layout_marginStart="250dp"
+        android:layout_marginTop="75dp"
+        android:background="@drawable/lagerfeuer"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/regen_button"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="150dp"
+        android:background="@drawable/regen"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/strand_button"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
         android:layout_marginStart="175dp"
         android:layout_marginTop="150dp"
-        android:background="@drawable/lagerfeuer_icon"
+        android:background="@drawable/strand"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/wald_button"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
         android:layout_marginStart="250dp"
         android:layout_marginTop="150dp"
-        android:background="@drawable/wald_icon"
+        android:background="@drawable/wald"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/imageButton3"
+        android:layout_width="72dp"
+        android:layout_height="83dp"
+        android:layout_marginStart="428dp"
+        android:layout_marginTop="108dp"
+        android:backgroundTint="#006e8c"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/musiclibrary" />
+
+    <ImageButton
+        android:id="@+id/imageButton4"
+        android:layout_width="108dp"
+        android:layout_height="146dp"
+        android:layout_marginTop="150dp"
+        android:layout_marginEnd="64dp"
+        android:layout_marginBottom="115dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/spotifyicon" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
