--- a/app/src/main/res/layout/activity_music_screen.xml
+++ b/app/src/main/res/layout/activity_music_screen.xml
@@ -11,7 +11,7 @@
         android:id="@+id/button_save_favorite"
         android:layout_width="150dp"
         android:layout_height="50dp"
-        android:layout_marginStart="150dp"
+        android:layout_marginStart="192dp"
         android:layout_marginTop="300dp"
         android:layout_marginBottom="60dp"
         android:background="#4DD7FA"
@@ -21,16 +21,16 @@
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
 
-        />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.633" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="150dp"
         android:layout_height="50dp"
         android:layout_marginTop="300dp"
-        android:layout_marginEnd="150dp"
+        android:layout_marginEnd="196dp"
         android:layout_marginBottom="60dp"
         android:background="#E80F0F"
         android:text="@string/play_favorite_button"
@@ -38,91 +38,120 @@
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.633" />
+
 
     <ImageButton
         android:id="@+id/berg_button"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="75dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="50dp"
         android:background="@drawable/berg"
+        app:layout_constraintEnd_toStartOf="@+id/dschungel_button"
+        app:layout_constraintHorizontal_bias="0.458"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/dschungel_button"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:layout_marginStart="175dp"
-        android:layout_marginTop="75dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="50dp"
         android:background="@drawable/dschungel"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/strand_button"
+        app:layout_constraintEnd_toStartOf="@+id/lagerfeuer_button"
+        app:layout_constraintStart_toEndOf="@+id/berg_button"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/lagerfeuer_button"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:layout_marginStart="250dp"
-        android:layout_marginTop="75dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="50dp"
         android:background="@drawable/lagerfeuer"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="350dp" />
 
     <ImageButton
         android:id="@+id/regen_button"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="150dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginStart="50dp"
         android:background="@drawable/regen"
+        app:layout_constraintEnd_toStartOf="@+id/strand_button"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/berg_button" />
 
     <ImageButton
         android:id="@+id/strand_button"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:layout_marginStart="175dp"
-        android:layout_marginTop="150dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:background="@drawable/strand"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toStartOf="@+id/wald_button"
+        app:layout_constraintStart_toEndOf="@+id/regen_button"
+        app:layout_constraintTop_toBottomOf="@+id/dschungel_button" />
 
     <ImageButton
         android:id="@+id/wald_button"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:layout_marginStart="250dp"
-        android:layout_marginTop="150dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:background="@drawable/wald"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/lagerfeuer_button"
+        tools:layout_editor_absoluteX="350dp" />
 
-    <ImageButton
-        android:id="@+id/imageButton3"
-        android:layout_width="72dp"
-        android:layout_height="83dp"
-        android:layout_marginStart="428dp"
-        android:layout_marginTop="108dp"
-        android:backgroundTint="#006e8c"
+    <ScrollView
+        android:layout_width="295dp"
+        android:layout_height="140dp"
+        android:layout_marginStart="572dp"
+        android:layout_marginTop="84dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/musiclibrary" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" />
+
+
+    </ScrollView>
 
     <ImageButton
         android:id="@+id/imageButton4"
-        android:layout_width="108dp"
-        android:layout_height="146dp"
-        android:layout_marginTop="150dp"
-        android:layout_marginEnd="64dp"
-        android:layout_marginBottom="115dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="300dp"
+        android:layout_marginEnd="30dp"
+        android:backgroundTint="#006e8c"
+        android:scaleType="fitCenter"
+        app:layout_constraintEnd_toStartOf="@+id/imageButton3"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/bluetooth" />
+
+    <ImageButton
+        android:id="@+id/imageButton5"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="300dp"
+        android:layout_marginEnd="30dp"
+        android:backgroundTint="#006e8c"
+        android:scaleType="fitCenter"
+        app:layout_constraintEnd_toStartOf="@+id/imageButton4"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/spotify" />
+
+    <ImageButton
+        android:id="@+id/imageButton3"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="300dp"
+        android:layout_marginEnd="60dp"
+        android:backgroundTint="#006e8c"
+        android:scaleType="fitCenter"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/spotifyicon" />
-
+        app:srcCompat="@drawable/musiclibrary" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
