--- a/app/src/main/res/layout/activity_music_screen.xml
+++ b/app/src/main/res/layout/activity_music_screen.xml
@@ -70,9 +70,11 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_marginTop="50dp"
+        android:layout_marginBottom="1dp"
         android:background="@drawable/lagerfeuer"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="350dp" />
+        app:layout_constraintBottom_toTopOf="@+id/wald_button"
+        app:layout_constraintStart_toEndOf="@+id/dschungel_button"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/regen_button"
@@ -99,8 +101,8 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:background="@drawable/wald"
-        app:layout_constraintTop_toBottomOf="@+id/lagerfeuer_button"
-        tools:layout_editor_absoluteX="350dp" />
+        app:layout_constraintStart_toEndOf="@+id/strand_button"
+        app:layout_constraintTop_toBottomOf="@+id/lagerfeuer_button" />
 
     <ScrollView
         android:layout_width="295dp"
