--- a/app/src/main/res/layout/activity_music_screen.xml
+++ b/app/src/main/res/layout/activity_music_screen.xml
@@ -7,40 +7,35 @@
     android:background="@color/darkblue"
     tools:context=".MusicScreen">
 
+
     <Button
         android:id="@+id/button_save_favorite"
         android:layout_width="150dp"
         android:layout_height="50dp"
-        android:layout_marginStart="192dp"
-        android:layout_marginTop="300dp"
-        android:layout_marginBottom="60dp"
-        android:background="#4DD7FA"
+        android:layout_marginStart="200dp"
+        android:layout_marginTop="450dp"
+        android:background="#00BCD4"
         android:text="@string/save_favorite_button"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
         android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.633" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="150dp"
         android:layout_height="50dp"
-        android:layout_marginTop="300dp"
-        android:layout_marginEnd="196dp"
-        android:layout_marginBottom="60dp"
+        android:layout_marginTop="450dp"
+        android:layout_marginEnd="200dp"
+        android:layout_marginBottom="100dp"
         android:background="#E80F0F"
         android:text="@string/play_favorite_button"
         android:textColor="#F6F0F0"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.633" />
-
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/berg_button"
@@ -49,6 +44,7 @@
         android:layout_marginStart="50dp"
         android:layout_marginTop="50dp"
         android:background="@drawable/berg"
+        android:contentDescription="@string/berg"
         app:layout_constraintEnd_toStartOf="@+id/dschungel_button"
         app:layout_constraintHorizontal_bias="0.458"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,6 +56,7 @@
         android:layout_height="150dp"
         android:layout_marginTop="50dp"
         android:background="@drawable/dschungel"
+        android:contentDescription="@string/dschungel"
         app:layout_constraintBottom_toTopOf="@+id/strand_button"
         app:layout_constraintEnd_toStartOf="@+id/lagerfeuer_button"
         app:layout_constraintStart_toEndOf="@+id/berg_button"
@@ -72,6 +69,7 @@
         android:layout_marginTop="50dp"
         android:layout_marginBottom="1dp"
         android:background="@drawable/lagerfeuer"
+        android:contentDescription="@string/lagerfeuer"
         app:layout_constraintBottom_toTopOf="@+id/wald_button"
         app:layout_constraintStart_toEndOf="@+id/dschungel_button"
         app:layout_constraintTop_toTopOf="parent" />
@@ -82,6 +80,7 @@
         android:layout_height="150dp"
         android:layout_marginStart="50dp"
         android:background="@drawable/regen"
+        android:contentDescription="@string/regen"
         app:layout_constraintEnd_toStartOf="@+id/strand_button"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -92,6 +91,7 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:background="@drawable/strand"
+        android:contentDescription="@string/strand"
         app:layout_constraintEnd_toStartOf="@+id/wald_button"
         app:layout_constraintStart_toEndOf="@+id/regen_button"
         app:layout_constraintTop_toBottomOf="@+id/dschungel_button" />
@@ -101,14 +101,15 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:background="@drawable/wald"
+        android:contentDescription="@string/wald"
         app:layout_constraintStart_toEndOf="@+id/strand_button"
         app:layout_constraintTop_toBottomOf="@+id/lagerfeuer_button" />
 
     <ScrollView
-        android:layout_width="295dp"
-        android:layout_height="140dp"
-        android:layout_marginStart="572dp"
-        android:layout_marginTop="84dp"
+        android:layout_width="485dp"
+        android:layout_height="335dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="36dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -127,6 +128,7 @@
         android:layout_marginTop="300dp"
         android:layout_marginEnd="30dp"
         android:backgroundTint="#006e8c"
+        android:contentDescription="@string/bluetooth"
         android:scaleType="fitCenter"
         app:layout_constraintEnd_toStartOf="@+id/imageButton3"
         app:layout_constraintTop_toTopOf="parent"
@@ -139,6 +141,7 @@
         android:layout_marginTop="300dp"
         android:layout_marginEnd="30dp"
         android:backgroundTint="#006e8c"
+        android:contentDescription="@string/spotify"
         android:scaleType="fitCenter"
         app:layout_constraintEnd_toStartOf="@+id/imageButton4"
         app:layout_constraintTop_toTopOf="parent"
@@ -151,9 +154,32 @@
         android:layout_marginTop="300dp"
         android:layout_marginEnd="60dp"
         android:backgroundTint="#006e8c"
+        android:contentDescription="@string/musiclibrary"
         android:scaleType="fitCenter"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/musiclibrary" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="297dp"
+        android:layout_height="70dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="60dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="8dp"
+        android:backgroundTint="#006e8c"
+        android:scaleType="fitCenter"
+        app:layout_constraintEnd_toStartOf="@+id/progressBar"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/ic_media_play" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
