--- a/app/src/main/res/layout/activity_light_screen.xml
+++ b/app/src/main/res/layout/activity_light_screen.xml
@@ -4,17 +4,153 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LightScreen">
+    tools:context=".LightScreen"
+    android:background="@color/darkblue"
+    >
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="577dp"
-        android:layout_height="421dp"
-        android:alpha="5"
-        android:text="Activity 2 wurde geöfnnet."
-        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
+
+    <Button
+        android:id="@+id/SaveAsFavorite"
+        android:layout_width="261dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="276dp"
+        android:layout_marginBottom="56dp"
+        android:background="#32E6FD"
+        android:backgroundTint="#32E6FD"
+        android:text="@string/save_as_favorite"
+        android:textColor="#FFFFFF"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/ShowFavorite"
+        android:layout_width="246dp"
+        android:layout_height="62dp"
+        android:background="#FF1100"
+        android:backgroundTint="#FF0202"
+        android:text="@string/show_favorite"
+        android:textColor="#FFFFFF"
+        android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.289"
+        app:layout_constraintStart_toEndOf="@+id/SaveAsFavorite"
+        app:layout_constraintTop_toBottomOf="@+id/blue"
+        app:layout_constraintVertical_bias="0.7" />
+
+        <SeekBar
+            android:id="@+id/seekBar2"
+            android:layout_width="428dp"
+            android:layout_height="84dp"
+            android:layout_marginStart="108dp"
+            android:layout_marginBottom="188dp"
+            android:indeterminate="false"
+            android:max="40"
+            android:scrollbarSize="20dp"
+            app:layout_constraintBottom_toTopOf="@+id/SaveAsFavorite"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.984" />
+
+    <TextView
+        android:id="@+id/blue"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:layout_marginTop="28dp"
+        android:background="#0027FF"
+        android:isScrollContainer="false"
+        android:text="@string/blue"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="50sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/nr3"
+        app:layout_constraintHorizontal_bias="0.896"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/yellow"
+        tools:text="B" />
+
+    <TextView
+        android:id="@+id/yellow"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:layout_marginTop="28dp"
+        android:background="#08FF00"
+        android:text="@string/green"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="50sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/nr2"
+        app:layout_constraintHorizontal_bias="0.896"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/red"
+        tools:text="G" />
+
+    <TextView
+        android:id="@+id/red"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:layout_marginTop="148dp"
+        android:background="#FB0202"
+        android:text="@string/red"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="50sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/nr1"
+        app:layout_constraintHorizontal_bias="0.897"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="R" />
+
+    <EditText
+        android:id="@+id/nr1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="132dp"
+        android:autofillHints=""
+        android:ems="10"
+        android:hint="@string/nr1"
+        android:inputType="number"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/nr2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.712" />
+
+    <EditText
+        android:id="@+id/nr2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="264dp"
+        android:layout_marginEnd="132dp"
+        android:autofillHints=""
+        android:ems="10"
+        android:hint="@string/nr2"
+        android:inputType="number"
+        android:textColor="#FFFFFF"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/nr3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="132dp"
+        android:autofillHints=""
+        android:ems="10"
+        android:hint="@string/nr3"
+        android:inputType="number"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/nr2"
+        app:layout_constraintVertical_bias="0.128" />
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
