--- a/app/src/main/res/layout/activity_music_screen.xml
+++ b/app/src/main/res/layout/activity_music_screen.xml
@@ -27,7 +27,7 @@
         android:layout_width="150dp"
         android:layout_height="50dp"
         android:layout_marginTop="450dp"
-        android:layout_marginEnd="200dp"
+        android:layout_marginEnd="180dp"
         android:layout_marginBottom="100dp"
         android:background="#E80F0F"
         android:text="@string/play_favorite_button"
@@ -35,7 +35,8 @@
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.05" />
 
     <ImageButton
         android:id="@+id/berg_button"
@@ -174,7 +175,8 @@
         android:id="@+id/imageButton"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:layout_marginTop="604dp"
+        android:layout_marginTop="456dp"
+        android:layout_marginEnd="16dp"
         android:backgroundTint="#006e8c"
         android:scaleType="fitCenter"
         app:layout_constraintEnd_toStartOf="@+id/progressBar"
