--- a/app/src/main/res/layout/activity_light_screen.xml
+++ b/app/src/main/res/layout/activity_light_screen.xml
@@ -8,12 +8,41 @@
     tools:context=".LightScreen">
 
 
+    <TextView
+        android:id="@+id/colorCode"
+        android:layout_width="335dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="64dp"
+        android:layout_marginEnd="208dp"
+        android:fontFamily="@font/bungee"
+        android:text="@string/color_code"
+        android:textAlignment="center"
+        android:textColor="#17E5FF"
+        android:textSize="45sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/stopchairButton_ID2"
+        android:layout_width="110dp"
+        android:layout_height="120dp"
+
+        android:layout_marginTop="528dp"
+        android:layout_marginEnd="16dp"
+        android:backgroundTint="#D61D3F"
+        android:backgroundTintMode="src_in"
+        android:clickable="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
+
     <Button
         android:id="@+id/SaveAsFavorite"
         android:layout_width="261dp"
         android:layout_height="60dp"
-        android:layout_marginStart="316dp"
-        android:layout_marginBottom="36dp"
+        android:layout_marginStart="252dp"
+        android:layout_marginBottom="204dp"
         android:background="@drawable/rounded_corners"
         android:backgroundTint="#03DAC5"
         android:text="@string/save_as_favorite"
@@ -25,148 +54,188 @@
 
     <Button
         android:id="@+id/ShowFavorite"
-        android:layout_width="246dp"
-        android:layout_height="62dp"
+        android:layout_width="236dp"
+        android:layout_height="53dp"
+        android:layout_marginEnd="264dp"
+        android:layout_marginBottom="192dp"
         android:background="@drawable/rounded_corners"
-        android:backgroundTint="#FF0202"
+        android:backgroundTint="@color/orangeRed"
         android:text="@string/show_favorite"
         android:textColor="#000000"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.286"
-        app:layout_constraintStart_toEndOf="@+id/SaveAsFavorite"
-        app:layout_constraintTop_toBottomOf="@+id/blue"
-        app:layout_constraintVertical_bias="0.48" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/ColorCode"
-        android:layout_width="288dp"
-        android:layout_height="78dp"
-        android:layout_marginTop="152dp"
+        android:layout_width="276dp"
+        android:layout_height="59dp"
+        android:layout_marginStart="236dp"
+        android:layout_marginTop="64dp"
         android:text="@string/color_code"
         android:textAlignment="center"
         android:textColor="#17E5FF"
         android:textSize="45sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.487"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/nr1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="124dp"
-        android:autofillHints=""
-        android:ems="10"
-        android:hint="@string/nr1"
-        android:inputType="number"
-        android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toTopOf="@+id/nr2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.895" />
-
-    <EditText
-        android:id="@+id/nr3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="124dp"
-        android:autofillHints=""
-        android:ems="10"
-        android:hint="@string/nr3"
-        android:inputType="number"
-        android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nr2"
-        app:layout_constraintVertical_bias="0.202" />
-
-    <EditText
-        android:id="@+id/nr2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="452dp"
-        android:layout_marginEnd="124dp"
-        android:autofillHints=""
-        android:ems="10"
-        android:hint="@string/nr2"
-        android:inputType="number"
-        android:textColor="#FFFFFF"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/red"
-        android:layout_width="75dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="84dp"
-        android:background="#FB0202"
-        android:text="@string/red"
-        android:textAlignment="center"
-        android:textColor="#000000"
-        android:textSize="50sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/nr1"
-        app:layout_constraintHorizontal_bias="0.967"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ColorCode"
-        tools:text="R" />
-
-    <TextView
-        android:id="@+id/yellow"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:layout_marginTop="12dp"
-        android:background="#08FF00"
-        android:text="@string/green"
-        android:textAlignment="center"
-        android:textColor="#000000"
-        android:textSize="50sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/nr2"
-        app:layout_constraintHorizontal_bias="0.968"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/red"
-        tools:text="G" />
-
-    <TextView
-        android:id="@+id/blue"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:layout_marginTop="16dp"
-        android:background="#0030FF"
-        android:isScrollContainer="false"
-        android:text="@string/blue"
-        android:textAlignment="center"
-        android:textColor="#000000"
-        android:textSize="50sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/nr3"
-        app:layout_constraintHorizontal_bias="0.968"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/yellow"
-        tools:text="B" />
 
     <Button
         android:id="@+id/colorweehlbutton"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_marginBottom="144dp"
+        android:layout_width="228dp"
+        android:layout_height="221dp"
 
+        android:layout_marginStart="252dp"
+        android:layout_marginTop="208dp"
         android:shadowColor="#FFFFFF"
         android:text="@string/pick_from_colorwheel"
         android:textAlignment="center"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/SaveAsFavorite"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.263"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ColorCode" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:layout_width="156dp"
+        android:layout_height="260dp"
+        android:layout_marginTop="208dp"
+        android:layout_marginEnd="272dp"
+        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <EditText
+            android:id="@+id/nr1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="55dp"
+            android:autofillHints=""
+            android:ems="10"
+            android:gravity="center"
+            android:hint="@string/nr1"
+            android:inputType="number"
+            android:textColor="#FFFFFF" />
+
+        <EditText
+            android:id="@+id/nr2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="60dp"
+            android:autofillHints=""
+            android:ems="10"
+            android:gravity="center"
+            android:hint="@string/nr2"
+            android:inputType="number"
+            android:textColor="#FFFFFF" />
+
+        <EditText
+            android:id="@+id/nr"
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:layout_marginBottom="20dp"
+            android:autofillHints=""
+            android:ems="10"
+            android:gravity="center"
+            android:hint="@string/nr2"
+            android:inputType="number"
+            android:textColor="#FFFFFF" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="77dp"
+        android:layout_height="257dp"
+        android:layout_marginTop="208dp"
+        android:layout_marginEnd="448dp"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/red"
+            android:layout_width="75dp"
+            android:layout_height="wrap_content"
+            android:background="#FB0202"
+            android:text="@string/red"
+            android:textAlignment="center"
+            android:textColor="#000000"
+            android:textSize="50sp"
+            android:textStyle="bold"
+            tools:text="R" />
+
+        <TextView
+            android:id="@+id/yellow"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:layout_marginTop="15dp"
+            android:background="#08FF00"
+            android:text="@string/green"
+            android:textAlignment="center"
+            android:textColor="#000000"
+            android:textSize="50sp"
+            android:textStyle="bold"
+            tools:text="G" />
+
+        <TextView
+            android:id="@+id/blue"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:layout_marginTop="20dp"
+            android:background="#0030FF"
+            android:isScrollContainer="false"
+            android:text="@string/blue"
+            android:textAlignment="center"
+            android:textColor="#000000"
+            android:textSize="50sp"
+            android:textStyle="bold"
+            tools:text="B" />
+    </LinearLayout>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintGuide_begin="646dp" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline11"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="640dp" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline12"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="120dp"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="121dp"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline13"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="62dp" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline15"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="123dp" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline16"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="1153dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
