UPDATE LIGHT SCREEN Layout

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="darkblue">#006e8c</color>
     <color name="orangeRed">#ff9800</color>
+    <colors name="snoozeBlau">#38c7ef</colors>
 </resources>
